--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node main.ts",
+    "start": "ts-node --files src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
