--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port $(node -pe 'JSON.parse(process.argv[1]).port' \"$(cat ../cross/config/local/front.json)\")",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
