--- a/front/package.json
+++ b/front/package.json
@@ -12,11 +12,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.1.1",
+    "@angular/cdk": "^7.1.1",
     "@angular/common": "^7.1.1",
     "@angular/compiler": "^7.1.1",
     "@angular/core": "^7.1.1",
     "@angular/forms": "^7.1.1",
     "@angular/http": "^7.1.1",
+    "@angular/material": "^7.1.1",
     "@angular/platform-browser": "^7.1.1",
     "@angular/platform-browser-dynamic": "^7.1.1",
     "@angular/router": "^7.1.1",
@@ -25,8 +27,11 @@
     "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.6.0",
     "jquery": "^3.3.1",
+    "ngx-showdown": "^4.0.2",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
+    "showdown": "^1.9.0",
+    "tslint-angular": "^1.1.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
