--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.6.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "ngx-showdown": "^4.0.2",
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
@@ -35,13 +36,13 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^7.1.1",
     "@angular-devkit/build-angular": "~0.11.1",
-    "typescript": "~3.1.6",
     "@angular/cli": "~7.1.1",
+    "@angular/compiler-cli": "^7.1.1",
     "@angular/language-service": "^7.1.1",
     "@types/jasmine": "~3.3.1",
     "@types/jasminewd2": "~2.0.6",
+    "@types/lodash": "^4.14.119",
     "@types/node": "~10.12.12",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
@@ -53,6 +54,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.1",
     "ts-node": "~7.0.1",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
