--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.1",
+    "@angular/animations": "^7.1.3",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "^7.1.1",
     "@angular/compiler": "^7.1.1",
@@ -26,6 +26,7 @@
     "@diaspora/webapi-provider-oauth2": "0.0.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "angular-oauth2-oidc": "^5.0.2",
+    "angular2-cookie-law": "^6.0.4",
     "core-js": "^2.6.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
@@ -41,6 +42,7 @@
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "^7.1.1",
     "@angular/language-service": "^7.1.1",
+    "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~3.3.1",
     "@types/jasminewd2": "~2.0.6",
     "@types/lodash": "^4.14.119",
