refactor(shared): Unflatened services directory

--- a/front/angular.json
+++ b/front/angular.json
@@ -11,6 +11,9 @@
       "schematics": {
           "@schematics/angular:component": {
               "styleext": "scss"
+          },
+          "@schematics/angular:service": {
+              "flat": false
           }
       },
       "architect": {
