--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "showdown": "^1.9.0",
+    "stack-subject": "^0.2.1",
     "tslint-angular": "^1.1.2",
     "zone.js": "^0.8.26"
   },
