--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -36,7 +36,7 @@
     // "noFallthroughCasesInSwitch": true,    /* Report errors for fallthrough cases in switch statement. */
 
     /* Module Resolution Options */
-    // "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
+    "moduleResolution": "node",            /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
     /*"baseUrl": ".",                         /* Base directory to resolve non-absolute module names. */
     /*"paths": {
         "cross": ["../cross/*"],
@@ -46,7 +46,7 @@
     /*"typeRoots": [
         "src/types",
         "node_modules/@types"
-    ],*                                        /* List of folders to include type definitions from. */
+    ],*                                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
