--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -19,6 +19,7 @@
 		"paths": {
 			"~app/*": ["./src/app/*"],
 			"~components/*": ["./src/app/components/*"],
+			"~guards/*": ["./src/app/guards/*"],
 			"~modals/*": ["./src/app/modals/*"],
 			"~pages/*": ["./src/app/pages/*"],
 			"~services/*": ["./src/app/services/*"],
