--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "nunjucks": "^3.1.7",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "sib-api-v3-sdk": "^7.0.5",
     "winston": "^3.1.0",
     "winston-daily-rotate-file": "^3.5.2"
   },
