--- a/back/package.json
+++ b/back/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "nodemailer": "^5.1.1",
+    "numeral": "^2.0.6",
     "nunjucks": "^3.1.7",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
@@ -35,6 +36,7 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/lodash": "^4.14.119",
     "@types/nodemailer": "^4.6.5",
+    "@types/numeral": "0.0.25",
     "@types/nunjucks": "^3.1.0",
     "@types/passport": "^0.4.7",
     "@types/passport-google-oauth": "^1.0.39",
