refactor: 💡 Rework configuration load & structure

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ back/logs/
 cross/config/test/
 
 back/lib/
+
+cross/config/environments/*
+!cross/config/environments/loader.ts
+!cross/config/environments/example
