chore: 🤖 Final adjustments to prepare deploy
Diaspora logger reconf to emit rotating files, various angular minor
fixes

--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p . && cp -r templates lib/back",
+    "build": "rimraf lib && tsc -p . && cp -r templates lib/back && rm -rf lib/back/cross/config/environments",
     "start": "LOG_DIRECTORY='./logs' ts-node src/main.ts",
     "watch": "LOG_DIRECTORY='./logs' ts-node-dev src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
