--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -63,6 +63,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "include": [
-      "src/**/*.ts"
+      "src/**/*.ts",
+      "../cross/config/environments/**/*.ts"
   ]
 }
