--- a/front/package.json
+++ b/front/package.json
@@ -18,55 +18,55 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.3",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "^7.1.1",
-    "@angular/compiler": "^7.1.1",
-    "@angular/core": "^7.1.1",
-    "@angular/forms": "^7.1.1",
-    "@angular/http": "^7.1.1",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "^7.1.1",
-    "@angular/platform-browser-dynamic": "^7.1.1",
-    "@angular/router": "^7.1.1",
+    "@angular/animations": "^7.2.8",
+    "@angular/cdk": "^7.3.3",
+    "@angular/common": "^7.2.8",
+    "@angular/compiler": "^7.2.8",
+    "@angular/core": "^7.2.8",
+    "@angular/forms": "^7.2.8",
+    "@angular/http": "^7.2.8",
+    "@angular/material": "^7.3.3",
+    "@angular/platform-browser": "^7.2.8",
+    "@angular/platform-browser-dynamic": "^7.2.8",
+    "@angular/router": "^7.2.8",
     "@diaspora/diaspora": "git+https://github.com/diaspora-orm/diaspora.git#prerelease",
     "@diaspora/webapi-provider-oauth2": "0.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
     "angular-oauth2-oidc": "^5.0.2",
-    "angular2-cookie-law": "^6.0.4",
-    "broadcast-channel": "^2.1.8",
-    "core-js": "^2.6.0",
+    "angular2-cookie-law": "^7.0.1",
+    "broadcast-channel": "^2.1.9",
+    "core-js": "^2.6.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "ngx-showdown": "^4.0.2",
-    "rxjs": "^6.2.2",
-    "rxjs-compat": "^6.2.2",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "showdown": "^1.9.0",
     "stack-subject": "^0.2.1",
     "tslint-angular": "^1.1.2",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.1",
-    "@angular/cli": "~7.1.1",
-    "@angular/compiler-cli": "^7.1.1",
-    "@angular/language-service": "^7.1.1",
+    "@angular-devkit/build-angular": "~0.13.5",
+    "@angular/cli": "~7.3.5",
+    "@angular/compiler-cli": "^7.2.8",
+    "@angular/language-service": "^7.2.8",
     "@types/google.analytics": "0.0.39",
-    "@types/jasmine": "~3.3.1",
+    "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.6",
-    "@types/lodash": "^4.14.119",
-    "@types/node": "~10.12.12",
+    "@types/lodash": "^4.14.122",
+    "@types/node": "~11.11.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.4",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.1",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.12.1",
-    "typescript": "~3.1.6"
+    "protractor": "~5.4.2",
+    "ts-node": "~8.0.3",
+    "tslint": "~5.13.1",
+    "typescript": "<3.3.0"
   }
 }
