--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "core-js": "^2.6.5",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
+    "ngx-pagination": "^3.2.1",
     "ngx-showdown": "^4.0.2",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
