--- a/back/package.json
+++ b/back/package.json
@@ -36,6 +36,7 @@
     "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
+    "@diaspora/dev-tslint": "^1.1.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
