--- a/front/package.json
+++ b/front/package.json
@@ -51,6 +51,7 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "^7.2.8",
+    "@diaspora/dev-tslint": "^1.1.0",
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.6",
