--- a/back/package.json
+++ b/back/package.json
@@ -36,7 +36,7 @@
     "winston-daily-rotate-file": "^3.8.0"
   },
   "devDependencies": {
-    "@diaspora/dev-tslint": "^1.1.0",
+    "@diaspora/dev-tslint": "^1.1.1",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
@@ -51,6 +51,7 @@
     "ts-node": "^8.0.3",
     "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.13.1",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.3333"
   }
 }
