--- a/cross/package.json
+++ b/cross/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
-    "@diaspora/dev-tslint": "^1.1.0",
+    "@diaspora/dev-tslint": "^1.1.1",
     "@diaspora/diaspora": "git+https://github.com/diaspora-orm/diaspora.git#prerelease",
-    "tslint": "^5.13.1"
+    "tslint": "^5.13.1",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.3.3333"
   }
 }
