--- a/front/package.json
+++ b/front/package.json
@@ -49,7 +49,7 @@
     "@angular/cli": "~7.3.5",
     "@angular/compiler-cli": "^7.2.8",
     "@angular/language-service": "^7.2.8",
-    "@diaspora/dev-tslint": "^1.1.0",
+    "@diaspora/dev-tslint": "^1.1.1",
     "@types/google.analytics": "0.0.39",
     "@types/jasmine": "~3.3.9",
     "@types/jasminewd2": "~2.0.6",
@@ -65,7 +65,8 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.0.3",
-    "tslint": "~5.13.1",
-    "typescript": "<3.3.0"
+    "tslint": "^5.13.1",
+    "tslint-eslint-rules": "^5.4.0",
+    "typescript": "^3.2.4"
   }
 }
