--- a/back/package.json
+++ b/back/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
     "sib-api-v3-sdk": "^7.1.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.8.0"
