--- a/back/package.json
+++ b/back/package.json
@@ -30,6 +30,7 @@
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
     "sib-api-v3-sdk": "^7.1.1",
     "winston": "^3.2.1",
@@ -46,6 +47,7 @@
     "@types/numeral": "0.0.25",
     "@types/nunjucks": "^3.1.1",
     "@types/passport": "^1.0.0",
+    "@types/passport-github": "^1.1.4",
     "@types/passport-google-oauth": "^1.0.39",
     "rimraf": "^2.6.3",
     "ts-node": "^8.0.3",
