--- a/back/package.json
+++ b/back/package.json
@@ -20,12 +20,14 @@
     "@diaspora/diaspora": "git+https://github.com/diaspora-orm/diaspora.git#prerelease",
     "@diaspora/plugin-server": "git+https://github.com/diaspora-orm/plugin-server.git#prerelease",
     "body-parser": "^1.18.3",
+    "bson": "^4.0.2",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "express-gateway": "^1.15.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
+    "mongoose": "^5.7.1",
     "nodemailer": "^5.1.1",
     "numeral": "^2.0.6",
     "nunjucks": "^3.2.0",
@@ -38,11 +40,13 @@
   },
   "devDependencies": {
     "@diaspora/dev-tslint": "^1.1.1",
+    "@types/bson": "^4.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.122",
+    "@types/mongoose": "^5.5.18",
     "@types/nodemailer": "^4.6.6",
     "@types/numeral": "0.0.25",
     "@types/nunjucks": "^3.1.1",
