--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@diaspora/diaspora": "git+https://github.com/diaspora-orm/diaspora.git#prerelease",
     "@diaspora/plugin-server": "git+https://github.com/diaspora-orm/plugin-server.git#prerelease",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@diaspora/dev-tslint": "^1.1.1",
+    "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.1",
     "@types/express-session": "^1.15.12",
@@ -50,11 +52,18 @@
     "@types/passport": "^1.0.0",
     "@types/passport-github": "^1.1.4",
     "@types/passport-google-oauth": "^1.0.39",
+    "@types/passport-local": "^1.0.33",
+    "cz-conventional-changelog": "^3.0.2",
     "rimraf": "^2.6.3",
     "ts-node": "^8.0.3",
     "ts-node-dev": "^1.0.0-pre.32",
     "tslint": "^5.13.1",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.3.3333"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
